Fix the save_to button which appears under the div on small screen. Ref PR #170

--- a/css/doorhanger.css
+++ b/css/doorhanger.css
@@ -17,7 +17,7 @@ body {
     display: inline-block;
     margin-top: 5px;
     padding-left: 10px;
-    width: calc(100% - 400px);
+    width: calc(100% - 500px);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
